--- a/client/src/css/Home.module.css
+++ b/client/src/css/Home.module.css
@@ -14,32 +14,36 @@
 celseste #42BCD5
 fondo #191630
  */
- .fondoLoadingContenido{
+ /* .fondoLoadingContenido{
     display: grid;  
     grid-template-columns: 1fr 3fr 2fr ;
     
- }
+ } */
 
- .clase1 {
+ /* .clase1 {
    grid-column: 1/2;
-   padding-top: 200px;
+   
    
  }
  .clase2 {
   grid-column: 2/4;
-}
+} */
+
+ /* .contenedorCards {
+  display: block;
+  width: 90%;
+ } */
 
 
- .contenedorCards {
-   display: grid;
-   grid-template-columns: repeat(3,1fr);
-   gap: 2rem;
-   align-items: center;
-   max-width: 120rem;
-   margin: 2rem auto;
- }
-
-
+  .contenedorCards {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    gap: 2rem;
+    align-items: center;
+    max-width: 120rem;
+    margin: 0 auto;
+  }
+ 
   .loading {
     width: 100%;
     height: 100%;
@@ -74,10 +78,10 @@ fondo #191630
 
 
 .select {
-  margin: 3rem auto;
+  margin: 2rem 0;
   display: block;
   padding: 1rem;
-  width: 60%;
+  width: 100%;
   background-color: #E6215E;
   border-radius: 0.5rem;
   border: solid 1px #191630;
@@ -108,4 +112,26 @@ fondo #191630
   font-size: 5rem;
   font-weight: bold;
   margin: 3rem auto;
+}
+.error {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  font-size: 2rem;
+  font-weight: bold ;
+  color: #fff;
+  
+}
+
+.filtrosTarjetas{
+  display: block;
+  margin: 0 auto;
+  width: 90%;
+}
+
+@media(min-width: 768px){
+  .filtrosTarjetas{
+    display: grid;
+    grid-template-columns: repeat(1, 0.8fr 2fr);
+    gap: 2rem; 
+  }
 }
