--- a/client/src/css/VideoGameCreated.module.css
+++ b/client/src/css/VideoGameCreated.module.css
@@ -10,14 +10,18 @@
 }
 
 .contenedorAll{
-    height: 80rem;
-    width: 70rem;
+    padding-bottom: 2rem;
+    width: 80%;
     background-color: #e6215f37 ;
     border-radius: 18px;
-    margin-top: 10px;
-    margin-left: 500px;
-    display: flex;
-    flex-direction:column;
+    margin: 2rem auto;
+
+}
+
+@media(min-width:768px){
+    .contenedorAll{
+       max-width: 80rem;
+    }
 }
 
 /*#42bcd582*/
@@ -57,20 +61,23 @@
 
 .input{
     padding: 1rem;
-    height: 25px;
-    width: 400px;
+    width: 90%;
     font-weight: bold;
     border-radius: 10px;
     border: solid 1px #E6215E;
     background-color: #191630;
     color: #42BCD5;
     font-size: 16px;
+}
+@media(min-width:768px){
+    .input{
+       max-width: 50rem;
+    }
 }
 
 .inputDescription{
     padding: 1rem;
-    height: 130px;
-    width: 400px;
+    width: 90%;
     font-weight: bold;
     border-radius: 10px;
     border: solid 1px #E6215E;
@@ -78,6 +85,12 @@
     color: #42BCD5;
     font-size: 16px;
 }
+@media(min-width:768px){
+    .inputDescription{
+       max-width: 50rem;
+    }
+}
+
 
 .select {
     font-weight: bold;
@@ -90,6 +103,12 @@
     border: solid 1px #191630;
     color: #E6215E;
 }
+@media(min-width:768px){
+    .select{
+       max-width: 50rem;
+    }
+}
+
 
 .listaGP {
     display: inline-flex;
